# dynamodb-python-crud-demo

./: .editorconfig  .env.dist  .gitignore  .python-version  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  documents.py
tests/: conftest.py  test_product.py  test_user.py
tests/factories/: product.py  user.py
